--- a/styles/style.css
+++ b/styles/style.css
@@ -12,24 +12,17 @@
 /* HEADER */
 
 .header {
-
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
   display: flex;
   position: relative;
-
 }
 
-.header_left_column {
+.header__left_column {
   display: flex;
   align-items: center;
-}
-
-.header-link {
-  text-decoration: none;
-  color: #2f80ed;
 }
 
 .logo {
@@ -41,7 +34,7 @@
   left: 64px;
 }
 
-.header_title {
+.header__title {
   /* border: 2px solid red; */
   width: 730px;
   align-items: center;
@@ -51,7 +44,7 @@
   margin-left: 64px;
 }
 
-.header_subtitle {
+.header__subtitle {
   position: absolute;
   /* border: 2px solid red; */
   width: 338px;
@@ -62,10 +55,19 @@
   font-weight: normal;
 }
 
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__arrow::after {
+  content: " -->";
+}
+
 
 /* .header_right_column {} */
 
-.header_main_illustration {
+.header__main_illustration {
   background-size: cover;
   position: absolute;
   width: 765px;
@@ -94,10 +96,10 @@
 /*  DESCRIPTION */
 
 .description {
-  padding-top: 100px;
+  margin-top: 100px;
 }
 
-.two-columns {
+.description__two_columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
@@ -111,7 +113,7 @@
   margin: 30px 0px;
 }
 
-.two-columns_brief {
+.description__two_columns_brief {
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -119,10 +121,12 @@
   color: #2f80ed;
 }
 
-/* .two-columns_main-text {} */
+.description__two_columns_main-text {
+  max-width: 965px;
+}
 
 
-.two-columns_paragraph {
+.description__two_columns_paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -135,12 +139,17 @@
   font-weight: 600;
 }
 
+
+
+
+
+/*  DIGITS  */
+
 .digits {
-  padding-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
-.digits_title {
+.table_title {
   width: 60%;
 }
 
@@ -154,18 +163,17 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  padding-left: 650px;
 }
 
-
-
 .table_title {
+  padding-left: 396px;
   padding-top: 100px;
   padding-bottom: 20px;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
 }
-
 
 .table {
   margin: 0 auto;
@@ -181,7 +189,6 @@
   margin-bottom: 60px;
   box-sizing: border-box;
 }
-
 
 .table_heading {
   margin-bottom: 20px;
@@ -206,24 +213,16 @@
 /*  FEYNMAN  */
 
 
-.feynman-link {
-  text-decoration: none;
-  color: #2f80ed;
-  position: absolute;
-  right: 48px;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-}
-
 .feynman {
   display: flex;
   flex-direction: column;
-  position: relative;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  min-height: 637px;
 }
 
 
-.feynman_title {
+.feynman__title {
   width: 648px;
   margin: 0 auto;
   line-height: 1.15;
@@ -232,7 +231,7 @@
   margin-top: 100px;
 }
 
-.feynman_subtitle {
+.feynman__subtitle {
   margin: 0 auto;
   margin-top: 70px;
   line-height: 51px;
@@ -240,22 +239,35 @@
   font-weight: normal;
 }
 
-.feynman-image {
+.feynman__link {
+  text-decoration: none;
+  color: #2f80ed;
   position: absolute;
-  z-index: -1;
-  width: 867px;
-  height: 637px;
+  /* right: 48px; */
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
 }
+
+.feynman__arrow::after {
+  content: " -->";
+}
+
+
+
 
 
 /*  KAUFMAN  */
 
 
 .kaufman {
-  margin-top: 100px;
+  /* margin-top: 100px; */
   background-color: #1f1f1f;
   /* overflow: hidden; */
   padding-top: 90px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 
@@ -276,6 +288,7 @@
 
 
 .table_title_theme_dark {
+  padding-left: 500px;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
@@ -285,6 +298,7 @@
 }
 
 .table_subtitle_theme_dark {
+  padding-left: 600px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -319,7 +333,7 @@
   justify-content: center;
 }
 
-.footer_author {
+.footer__author {
   color: #f2f2f2;
   position: absolute;
   bottom: 18px;
@@ -328,7 +342,7 @@
   font-weight: normal;
 }
 
-.footer-columns {
+.footer__columns {
   display: flex;
   justify-content: space-between;
   width: 90%;
@@ -336,11 +350,11 @@
   margin-bottom: 40px;
 }
 
-.footer-columns_content_copyright {
+.footer__columns_content_copyright {
   flex-basis: 711px;
 }
 
-.footer_list {
+.footer__list {
   list-style-type: none;
   color: #f2f2f2;
 }
@@ -351,7 +365,7 @@
 .footer-columns_content_social {
 } */
 
-.footer-column_link {
+.footer__column_link {
   color: #f2f2f2;
   text-decoration: none;
   line-height: 30px;
@@ -359,15 +373,28 @@
   font-weight: normal;
 }
 
-.logo_place_footer {
+.logo__place_footer {
   position: absolute;
 }
 
-.footer-heading {
+.footer__heading {
   padding-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
+}
+
+
+.social_icon_face {
+  padding-right: 20px;
+}
+
+.social_icon_vk {
+  padding-right: 20px;
+}
+
+.social_icon_inst {
+  padding-right: 20px;
 }
 
 /* .footer-column_link::hover {
